# aieos-pipeline-runner

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: operator-guide.md
src/aieos_pipeline_runner/: __init__.py  artifact_store.py  cli.py  events.py  ingestion.py  mock_adapter.py  models.py  orchestrator.py  plan_validator.py  resolver.py  run_validator.py  spec_validator.py
src/aieos_pipeline_runner/schemas/: README.md  capability-contract.schema.json  cd-spec.schema.json  ci-spec.schema.json
tests/: conftest.py  test_cli.py  test_full_pipeline.py  test_ingestion.py  test_orchestrator.py  test_plan_validator.py  test_resolver.py  test_run_validator.py  test_smoke.py  test_spec_validator.py
